...
    <string name="history_sort_date_asc">Oldest first</string>
    <string name="history_sort_name_asc">Name A-Z</string>
    <string name="history_sort_name_desc">Name Z-A</string>
    <string name="history_sort_size_desc">Size: largest first</string>
    <string name="history_sort_size_asc">Size: smallest first</string>

    <string name="tag_new">New tag</string>
    <string name="tag_default_name">Highlight Replay</string>
    <string name="tag_chip_prefix">#%1$s</string>
    <string name="tag_coverage_partial">Partially applied</string>
    <string name="tag_name_label">Tag name</string>
    <string name="tag_exists">Tag already exists</string>
    <string name="tag_create">Create</string>
    <string name="tag_cancel">Cancel</string>
    <string name="tag_close">Close</string>
    <string name="tag_delete_title">Delete tag</string>
    <string name="tag_delete_confirm">Delete tag \"%1$s\"?\nThe tag will be removed from all videos.</string>
    <string name="tag_delete">Delete</string>
    <string name="tag_done">Done</string>

...
